--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             
             <div id="emptyState" class="empty-state">
                 <i>🔒</i>
-                <h3>No passwords stored yet</h3>
+            ;i. jnnnn    <h3>No passwords stored yet</h3>
                 <p>Add your first password by clicking the "Add New Password" button above.</p>
             </div>
         </div>
